--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,7 +1,13 @@
 server {
   listen 80;
-  server_name db.lh.thejmc.net;
+  server_name db.sussex.thejmc.net;
   location / {
     proxy_pass http://db;
   }
+}
+server {
+    listen 80;
+    location / {
+        proxy_pass http://app:1337;
+    }
 }
